# ctrigrid

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: ClosestDistanceQueryBenchmarks.cpp  ClosestTriUniformGridBenchmarks.cpp
include/ctrigrid/: AxisAlignedBoundingBox.h  BitStream.h  ClosestTriUniformGrid.h  Compiler.h  MathOptConfig.h  TriQueries.h  Vector3.h  Vector4.h
python/: mesh_bindings.cpp  module.cpp  module.h  queries_bindings.cpp
python/tests/: GLutils.py  README.md  test_closest_point.py  test_grid.py  test_grid_file.py
src/: AxisAlignedBoundingBox.cpp  BitStream.cpp  ClosestTriUniformGrid.cpp  ClosestTriUniformGrid_Builder.cpp  ClosestTriUniformGrid_Index.cpp  TriQueries.cpp  Vector3.cpp  Vector4.cpp
tests/: AxisAlignedBoundingBoxUnitTests.cpp  BitStreamUnitTests.cpp  ClosestDistanceQueryTests.cpp  ClosestTriUniformGridUnitTests.cpp  IntersectionQueryTests.cpp  MathTestUtils.h  Vector3UnitTests.cpp  Vector4UnitTests.cpp
